--- a/style.css
+++ b/style.css
@@ -153,3 +153,108 @@
             color: white;
             cursor: pointer;
         }
+        /* Footer */
+
+        footer{
+            width: 100%;
+            background-color: var(--azul-dnc);
+        }
+        footer .linha1{
+            display:flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+        footer ul{
+            list-style: none;
+            margin: 0px;
+            padding: 0px;
+        }
+        footer nav{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            height: 330px;
+
+        }
+        footer h5{
+            text-align: center;
+            color: white;
+            font-weight: 800;
+            font-size: 18px;
+            font-family: var(--fonte-padrao);
+            background-color: var(--preto-dnc);
+            border-radius: 10px;
+            padding: 10px 10px 10px 10px;
+            margin-bottom: 15px;
+        }
+        footer ul li{
+            text-align: center;
+            color: white;
+            font-weight: 600;
+            font-family: var(--fonte-padrao);
+            font-size: 18px;
+            margin: 20px 0px 20px 0px;
+        }
+        footer ul li a{
+            color: white;
+            text-decoration: none;
+        }
+        footer ul li a:hover{
+            color: var(--cinza-hover);
+        }
+        footer .endereco{
+            font-weight: 600;
+            font-size: 18px;
+            font-family: var(--fonte-padrao);
+            text-align: center;
+            color: white;
+            width: 20%;
+        }
+
+        footer .linha2{
+            height: 35px;
+            display: flex;
+            justify-content: center;
+            margin: 0px ;
+            padding: 10px;
+        }
+        footer .linha2 a{
+            font-family: var(--fonte-padrao);
+            font-size: 18px;
+            font-weight: 600;
+            color: white;
+            text-decoration: none;
+            padding: 5px;
+        }
+        footer .linha2 a:first-child{
+            border-right: 2px solid white;
+
+        }
+        footer .linha2 a:hover{
+            color: var(--cinza-hover);
+        }
+        
+@media only screen and (max-width: 600px){
+    #Principal{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #Menu{
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+    #Menu a{
+        display: flex;
+        align-items: center;
+        height: 50px;
+    }
+    #Principal button{
+        width: 100%;
+        margin: 0px;
+    }
+    
+
+}
+
